# gpt-latex-ctrl-c-v

./: .gitignore  AGENTS.md  BUILD_SUMMARY_v0.2.0.md  CLIPBOARD_DEBUG_ENABLED.md  COMPLETE_TEST_SUMMARY.md  ChatGPT_example.html  DEBUGGING.md  DEBUGGING_NO_LOGS.md  FINAL_TEST_RESULTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MATHJAX_BRIDGE_FIX.md  MATHJAX_LOADING_FIX.md  PROBLEM_ANALYSIS.md  PROBLEM_ANALYSIS_QUICK_REFERENCE.md  Pasted-Formatted.docx  README.md  Release_Notes.md  STRUCTURAL_SCHEMA.md  Selection_test_in_real.docx  background.js  constants.js  content-script.js  diagram.md  manifest.chromium.json  manifest.json  package-lock.json  package.json  pyproject.toml  selection_example.html  selection_example_static.docx  selection_example_static.html  temp_lang_options.txt  temp_lang_options_clean.txt
docs/: AMO_SUBMISSION.md  ARCHITECTURE.md  INTERFACE_SCHEMA.md  MOZILLA_DOCUMENTATION_GAPS.md  PRIVACY.md  PROBLEM_ANALYSIS.md  PROBLEM_ANALYSIS_QUICK_REFERENCE.md  Plan for a Firefox Extension to Export AI Chats to OpenDocument Format.docx  README.md  STRUCTURAL_SCHEMA.md  TRANSLATION.md  diagram.md
examples/: 2025-12-28-Document_Continuity.html  ChatGPT_example.html  Source of Selection-Test-2.htm  clipboard_direct_test.html  debug-extension.html  diagnose_extension.html  force-wasm-latex-test.html  force-wasm-unicode-math-test.html  gemini-conversation-test.html  katex-markup-test.html  paste.txt  selection_example_static.html  test_data_math_in_svg.html  test_edge_cases.html  test_error_conditions.html  test_iframe.html  test_large_selection.html  test_links.html  test_selection_loss.html  test_xss_payloads.html  translation-e2e-test.html
extension/: background.js  constants.js  content-script.js  manifest.chromium.json  manifest.json  offscreen.html  offscreen.js  options.html  options.js  page-mathjax-bridge.js  popup.html  popup.js
lib/: __init__.py
plans/: ADDONMANAGER_LOADING_PLAN.md
plans_completed/: DOUBLE_DOLLAR_FIX_COMPLETE.md  DOUBLE_DOLLAR_SUPPORT_ADDED.md  TEST_PAGES_FIXED.md
rust/docx_from_html/: Cargo.toml
rust/docx_from_html/src/: main.rs
rust/translation_wasm/: Cargo.toml
rust/translation_wasm/src/: ai.rs  auth.rs  bing.rs  cache.rs  custom.rs  deepl.rs  escape.rs  ffi.rs  google.rs  html.rs  lib.rs  libre.rs  service.rs  utils.rs  wasm_bindgen.rs  yandex.rs
test_example/: Google Gemini.htm
tests/: DEBUG_CLIPBOARD_ISSUE.md  EXTENSION_LOADING_CORRECT_APPROACH.md  EXTENSION_LOADING_GUIDE.md  EXTENSION_LOADING_REALITY.md  FINAL_TEST_REPORT.md  QUICK_DEBUG.md  QUICK_START.md  README.md  README_AUTOMATED.md  README_TESTING.md  SUPER_TESTING_COMPLETE.md  SUPER_TEST_RESULTS.md  TEST_EXECUTION_REPORT.md  TEST_INSTRUCTIONS.md  TEST_SUITE_SUMMARY.md  TEST_SUMMARY.md  check_trial_with_code_and_formula_integrity_ru_google_free.js  debug-extension.html  diagnose_extension.html  requirements.txt  run_all.py  run_comprehensive_tests.bat  run_comprehensive_tests.sh  run_super_tests.py  run_tests.bat  run_tests.sh  run_translation_tests.py  test_anchor_restore_marker_order.js  test_anchoring.py  test_anchoring_smoke.js  test_auto_reload.py  test_automated.py  test_comprehensive.py  test_edge_cases.html  test_edge_cases.py  test_extension.py  (+29 more)
(+107 files in other folders)
