[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt-latex-ctrl-c-v"
version = "0.2.0"
description = "Dev/test harness for the GPT LATEX Ctrl-C Ctrl-V Firefox extension."
requires-python = ">=3.10"
dependencies = [
  "playwright==1.57.0",
  "pyperclip==1.11.0",
  "selenium==4.39.0"
]

[tool.uv]
# uv manages the virtual environment and lockfile; no extra configuration needed here.

[tool.hatch.build.targets.wheel]
include = [
  "tests/**",
  "tools/**",
  "extension/**",
  "examples/**",
  "docs/**",
  "plans/**",
  "plans_completed/**",
  "AGENTS.md",
  "pyproject.toml",
  "uv.lock"
]
